docs: add tasks routes to docs swagger.json
